# libalgo-c

./: .gitignore  CMakeLists.txt  Readme.md
include/: data_types.h  libalgo.h  list.h  stack.h  utils.h
src/: data_types.c  linked_list.c  list.c  stack.c
test/: CMakeLists.txt  list.c  stack.c
